--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 </head>
 <body>
   <dir-root>Loading...</dir-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.defd4e11283d3aa66903.bundle.js"></script><script type="text/javascript" src="main.0970dc3074e84ae3a962.bundle.js"></script></body>
+<script type="text/javascript" src="blob/master/inline.js"></script><script type="text/javascript" src="styles.defd4e11283d3aa66903.bundle.js"></script><script type="text/javascript" src="main.0970dc3074e84ae3a962.bundle.js"></script></body>
 </html>
